syntax = "proto3";

package models;

option csharp_namespace = "CountryService.Web.Protos.model";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message CountryReply {
	int32 Id = 1;
	string Name = 2;
	string Description = 3;
	bytes Flag = 4;
	google.protobuf.Timestamp CreateDate = 5;
	google.protobuf.Timestamp UpdateDate = 6;
}

message CountryIdRequest {
	int32 Id = 1;
}

message CountryUpdateRequest {
	int32 Id = 1;
	string Description = 3;
	google.protobuf.Timestamp UpdateDate = 6;
}

message CountryCreationRequest {
	string Name = 2;
	string Description = 3;
	bytes Flag = 4;
	google.protobuf.Timestamp CreateDate = 5;
}

message CountryCreationReply {
	int32 Id = 1;
	string Name = 2;
	string Description=3;
}